Setting up the starter css styling for the carousel

--- a/style.css
+++ b/style.css
@@ -20,8 +20,17 @@ header {
   height: 50px;
   display: flex;
   align-items: center;
+  position: relative;
+  z-index: 100;
 }
 
 header a {
   margin-right: 48px;
+}
+
+.carousel {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  margin-top: -50px;
 }
