--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ a {
 }
 
 header {
-  width: 1180px;
+  width: 1140px;
   max-width: 80%;
   margin: auto;
   height: 50px;
@@ -33,4 +33,31 @@ header a {
   height: 100vh;
   overflow: hidden;
   margin-top: -50px;
+  position: relative;
 }
+
+.carousel .list .item {
+  position: absolute;
+  inset: 0 0 0 0;
+}
+
+.carousel .list .item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.carousel .list .item .content {
+  position: absolute;
+  top: 20%;
+  width: 1140px;
+  max-width: 80%;
+  left: 50%;
+  transform: translateX(-50%);
+  padding-right: 30%;
+  box-sizing: border-box;
+  color: #fff;
+  text-shadow: 0 5px 10px #0004;
+}
+
+
