Finishing on the thumbnail section styling

--- a/style.css
+++ b/style.css
@@ -97,3 +97,35 @@ header a {
   color: #eee;
   border: 1px solid #eee;
 }
+
+.thumbnail {
+  position: absolute;
+  bottom: 50px;
+  left: 50%;
+  width: max-content;
+  z-index: 100;
+  display: flex;
+  gap: 20px;
+}
+
+.thumbnail .item {
+  width: 150px;
+  height: 220px;
+  flex-shrink: 0;
+  position: relative;
+}
+
+.thumbnail .item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.thumbnail .item .content {
+  position: absolute;
+  inset: auto 10px 10px 10px;
+}
+
+.thumbnail .item .content .title {
+  font-weight: bold;
+}
