--- a/style.css
+++ b/style.css
@@ -129,3 +129,32 @@ header a {
 .thumbnail .item .content .title {
   font-weight: bold;
 }
+
+.arrows {
+  position: absolute;
+  top: 80%;
+  right: 52%;
+  width: 300px;
+  max-width: 30%;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.arrows button {
+  width: 40px;
+  height: 40px;
+  border: none;
+  border-radius: 50%;
+  background-color: #eee4;
+  font-family: monospace;
+  color: #fff;
+  font-weight: bold;
+  font-size: large;
+  transition: .5s;
+}
+
+.arrows button:hover {
+  background-color: #eee;
+  color: #555;
+}
