--- a/style.css
+++ b/style.css
@@ -153,6 +153,7 @@ header a {
   font-weight: bold;
   font-size: large;
   transition: .5s;
+  z-index: 100;
 }
 
 .arrows button:hover {
@@ -197,4 +198,48 @@ header a {
 
 .carousel .list .item:nth-child(1) .buttons {
   animation-delay: 1.9s;
+}
+
+/* Effect Next Click */
+.carousel.next .list .item:nth-child(1) img {
+  width: 150px;
+  height: 220px;
+  position: absolute;
+  bottom: 50px;
+  left: 50%;
+  border-radius: 20px;
+  animation: showImage 0.5s linear 1 forwards;
+}
+
+@keyframes showImage {
+  to {
+    width: 100%;
+    height: 100%;
+    left: 0;
+    bottom: 0;
+    border-radius: 0;
+  }
+}
+
+.carousel.next .list .item:nth-last-child(1) {
+  width: 0;
+  overflow: hidden;
+  animation: showThumbnail .5s linear 1 forwards;
+} 
+
+@keyframes showThumbnail {
+  to {
+    width: 150px;
+  }
+}
+
+.carousel.next .thumbnail {
+  transform: translateX(150px);
+  animation: transformThumbnail .5s linear 1 forwards;
+}
+
+@keyframes transformThumbnail {
+  to {
+    transform: translateX(0);
+  }
 }
